--- a/academic_service/src/main/resources/application.properties
+++ b/academic_service/src/main/resources/application.properties
@@ -5,8 +5,11 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
+eureka.client.service-url.defaultZone=http://localhost:8761/
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.resources.static-locations=classpath:/static/
+eureka.client.enabled=false
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
