--- a/academic_service/src/main/resources/application.properties
+++ b/academic_service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=academic_service
-spring.datasource.url=jdbc:postgresql://localhost:5432/academic_service
+spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/academic_service
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
