mise a jour de eureka

--- a/euraka/src/main/resources/application.properties
+++ b/euraka/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=euraka
 server.port=8082
 
 # Désactiver l'inscription à soi-même (puisque c'est le serveur)
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 
 # URL du serveur (lui-même)
 eureka.client.service-url.defaultZone=http://localhost:8082/eureka
