--- a/project_service/src/main/resources/application.properties
+++ b/project_service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=project_service
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/projet-service
+spring.datasource.url=jdbc:postgresql://localhost:5432/projet_service
 spring.datasource.username=postgres
 spring.datasource.password=postgresql
 spring.jpa.hibernate.ddl-auto=update
