--- a/academic_service/src/main/resources/application.properties
+++ b/academic_service/src/main/resources/application.properties
@@ -1,15 +1,23 @@
 spring.application.name=academic_service
-spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/academic_service
+spring.datasource.url=jdbc:postgresql://postgres:5432/academic_service
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-eureka.client.service-url.defaultZone=http://localhost:8761/
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.resources.static-locations=classpath:/static/
-eureka.client.enabled=false
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+
+
+eureka.client.service-url.defaultZone=http://localhost:8082/eureka/
+eureka.instance.instance-id=${spring.application.name}.${server.port}
+eureka.instance.prefer-ip-address=true
+
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+
+logging.level.com.netflix.discovery=OFF
