--- a/academic_service/Dockerfile
+++ b/academic_service/Dockerfile
@@ -1,3 +1,4 @@
 FROM openjdk:21
+WORKDIR /app
 COPY target/academic_service-0.0.1-SNAPSHOT.jar academic_service.jar
-ENTRYPOINT ["java", "-jar", "/academic_service.jar"]
+ENTRYPOINT ["java", "-jar", "academic_service.jar"]
