--- a/gateway_bd/src/main/resources/application.properties
+++ b/gateway_bd/src/main/resources/application.properties
@@ -3,30 +3,59 @@ spring.application.name=gateway_bd
 
 spring.cloud.gateway.routes[0].id = notification_service
 spring.cloud.gateway.routes[0].uri = http://localhost:8081
-spring.cloud.gateway.routes[0].predicates[0] = Path= C:\Users\DLP\projetBD\notification_service
+#request mapping du controleur Notification
+spring.cloud.gateway.routes[0].predicates[0] = Path= /api/notifications/**
+spring.cloud.gateway.routes[0].predicates[0] = Method = GET,POST
 
 spring.cloud.gateway.routes[1].id = project-service
-spring.cloud.gateway.routes[1].uri = http://localhost:8082 //nom des microservices dans eureka server
-spring.cloud.gateway.routes[1].predicates[1] = Path= /api/documents/** //request mapping controleur1
-spring.cloud.gateway.routes[1].predicates[2] = Path= /api/categories/** //request mapping controleur2
-spring.cloud.gateway.routes[1].predicates[3] = Path= /api/categories/** //request mapping controleur3
-spring.cloud.gateway.routes[1].predicates[4] = Path= /api/categories/** //
-spring.cloud.gateway.routes[1].predicates[5] = Path= /api/categories/** //
+#nom des microservices dans eureka server au lieu de localhost
+spring.cloud.gateway.routes[1].uri = http://localhost:8082 
+#request mapping du controleur Categorie
+spring.cloud.gateway.routes[1].predicates[0] = Path= /api/categories/** 
+spring.cloud.gateway.routes[1].predicates[0] = Method= GET,POST,PUT,DELETE 
+#request mapping du controleur Commentaire 
+spring.cloud.gateway.routes[1].predicates[1] = Path= /api/commentaires/** 
+spring.cloud.gateway.routes[1].predicates[1] = Method= GET,POST,PUT,DELETE 
+#request mapping du controleur Document
+spring.cloud.gateway.routes[1].predicates[2] = Path= /api/documents/** 
+spring.cloud.gateway.routes[1].predicates[2] = Method= GET,POST,PUT,DELETE 
+#request mapping du controleur de documents et versions
+spring.cloud.gateway.routes[1].predicates[3] = Path= /api/docvers/** 
+spring.cloud.gateway.routes[1].predicates[3] = Method= GET,POST,DELETE 
+#request mapping du controleur Evenenment
+spring.cloud.gateway.routes[1].predicates[4] = Path= /api/evenements/**
+spring.cloud.gateway.routes[1].predicates[4] = Method= GET,POST,PUT,DELETE 
+#request mapping du controlleur Version
+spring.cloud.gateway.routes[1].predicates[5] = Path= /api/versions/**
+spring.cloud.gateway.routes[1].predicates[5] = Method= GET,POST,PUT,DELETE 
 
 spring.cloud.gateway.routes[2].id = file_service
 spring.cloud.gateway.routes[2].uri = http://localhost:8083
-spring.cloud.gateway.routes[2].predicates[2] = Path= /microservice-3/**
+#request mapping du controleur Categorie
+spring.cloud.gateway.routes[2].predicates[0] = Path= /api/documents/**
+spring.cloud.gateway.routes[2].predicates[0] = Method= GET,POST,DELETE 
 
 spring.cloud.gateway.routes[3].id = academic_service
 spring.cloud.gateway.routes[3].uri = http://localhost:8084
-spring.cloud.gateway.routes[3].predicates[3] = Path= /microservice-4/**
+#request mapping du controleur Department
+spring.cloud.gateway.routes[3].predicates[0] = Path= /api/departments/**
+spring.cloud.gateway.routes[3].predicates[0] = Method= GET,POST,PUT,DELETE 
+#request mapping du controleur Filiere
+spring.cloud.gateway.routes[3].predicates[1] = Path= /api/filieres/**
+spring.cloud.gateway.routes[3].predicates[1] = Method= GET,POST,PUT,DELETE 
+
 
 spring.cloud.gateway.routes[4].id = user_service
 spring.cloud.gateway.routes[4].uri = http://localhost:8085
-spring.cloud.gateway.routes[4].predicates[4] = Path= /microservice-5/**
+#request mapping du controleur User
+spring.cloud.gateway.routes[4].predicates[0] = Path= /api/users/**
+spring.cloud.gateway.routes[4].predicates[0] = Method= GET,POST,PUT,DELETE 
+#request mapping du controleur Authentification
+spring.cloud.gateway.routes[4].predicates[1] = Path= /api/auth/**
+spring.cloud.gateway.routes[4].predicates[1] = Method= POST 
 
 
-eureka.client.service-url.defaultZone = http//localhost:8761/eureka //au lieu de localhost on met @IP du serveur eureka
+eureka.client.service-url.defaultZone = http://localhost:8761/eureka/  //au lieu de localhost on met @IP du serveur eureka
 
 spring.jpa.hibernate.ddl-auto = update
 
